--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -10,9 +10,7 @@
   <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link
-    href="https://fonts.googleapis.com/css?family=Anton|Oswald|Teko&display=swap|Open+Sans+Condensed:300|Six+Caps&display|Russo+One|Anton"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Anton|Oswald|Six+Caps&display|Russo+One|Anton" rel="stylesheet">
 
   <title>Portfolio-React</title>
 </head>
